// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DebateLink component should match the DebateLink (small screen) 1`] = `
<div
  className="debate-link"
  onMouseLeave={null}
  onMouseOver={null}
>
  <div
    className="debate-class"
    data-text="Debate"
    onClick={[Function]}
  >
    <span>
      Debate
    </span>
  </div>
</div>
`;

exports[`DebateLink component should match the DebateLink 1`] = `
<div
  className="debate-link"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="debate-class"
    data-text="Debate"
    onClick={[Function]}
  >
    <span>
      Debate
    </span>
  </div>
  <div
    className="header-container"
  >
    <section
      className="timeline-section"
      id="timeline"
    >
      <div
        className="max-container"
      >
        <DumbTimeline
          activeSegment={-1}
          debate={
            Object {
              "debateData": Object {
                "timeline": Array [],
              },
            }
          }
          identifier="survey"
          onItemDeselect={[Function]}
          onItemSelect={[Function]}
          showNavigation={true}
        />
      </div>
    </section>
  </div>
</div>
`;
